# foljapp

./: .gitignore  .prettierignore  CLAUDE.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/web/: mdx-components.tsx  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
data/: english-irregulars.json  stress-overrides.json
data/corpora/: README.md  cache-benchmark.md  middle-passive-lexicon-review.json  (+4 more)
docs/: ARCHITECTURE.md
openspec/: config.yaml
scripts/: add-husic-citations.ts  aggregate-corpus-phrase-variants.ts  audit-corpus-misses.ts  audit-external-morphology.ts  audit-stress.ts  build-corpus-example-targets.ts  build-corpus-targets.ts  build-corpus.ts  build-local-corpus-examples.py  build-opus-examples.ts  build-parallel-examples.ts  build-static-examples.ts  build-uniparser-analysis-requests.ts  check-middle-passive-review.ts  diff-phrase-variant-reports.ts  download-opus-corpora.ts  husic-glossary-cross-resolve.ts  ingest-kaikki-batch.ts  materialize-local-corpus-examples.py  parse-husic-pdf.py  parse-husic.ts  patch-pages-routes.ts  report-corpus-coverage.ts  report-corpus-missing-forensics.ts  rescan.sh  run-uniparser-analysis.py  sample-glosses.ts  verify-engine.ts  verify-readme-proof.mjs
tools/corpus-indexer/: Cargo.toml  README.md
tools/corpus-indexer/src/: candidate_cache.rs  db.rs  main.rs  phrase_variant_stress.rs  quality.rs  sources.rs  targets.rs  text.rs
(+790 files in other folders)
