[package]
name = "corpus-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
quick-xml = "0.36"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xz2 = "0.1"
zip = "2"
