[package]
name = "corpus-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1"
anyhow = "1"
bzip2 = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
parquet = "53"
quick-xml = "0.36"
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.24"
tar = "0.4"
xz2 = "0.1"
zip = "2"
zstd = "0.13"
